--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@enzymefinance/abis": "^0.0.9",
-    "@enzymefinance/sdk": "^0.0.18",
+    "@yourorg/enzyme-sdk-custom": "^1.0.0",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^3.0.1",
     "@graphql-codegen/client-preset-swc-plugin": "^0.2.0",
